--- a/src/app/components/view-airfrance/view-airfrance.component.html
+++ b/src/app/components/view-airfrance/view-airfrance.component.html
@@ -6,11 +6,11 @@
         <app-filtres (filtresEvent)="onFiltresEvent($event)"></app-filtres>
       </div>
       <div class="bottom">
-        <app-liste-vols></app-liste-vols>
+        <app-liste-vols [vols]="vols" (vol_emitter)="handleVol($event)"></app-liste-vols>
       </div>
     </div>
     <div class="right">
-      <app-liste-passagers></app-liste-passagers>
+      <app-liste-passagers [passengers]="currentVol?.passagers"></app-liste-passagers>
     </div>
   </div>
 </div>
