--- a/src/app/components/passager/passager.component.html
+++ b/src/app/components/passager/passager.component.html
@@ -1,1 +1,7 @@
 <!-- Affichage d'un passager -->
+<div class="passenger">
+  <div><img src="{{ passager.image }}" /></div>
+  <div>{{ passager.nom }}</div>
+  <div>{{ passager.classeVol }}</div>
+  <div class="icon"><mat-icon>work</mat-icon>x{{ passager.nbBagagesSoute }}</div>
+</div>
