--- a/src/app/components/view-airfrance/view-airfrance.component.html
+++ b/src/app/components/view-airfrance/view-airfrance.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="right">
-      <app-liste-passagers [passengers]="currentVol?.passagers"></app-liste-passagers>
+      <app-liste-passagers [passengers]="passagers"></app-liste-passagers>
     </div>
   </div>
 </div>
