--- a/src/app/components/liste-passagers/liste-passagers.component.html
+++ b/src/app/components/liste-passagers/liste-passagers.component.html
@@ -1,3 +1,8 @@
 <!-- Affichage de la liste des passagers -->
-
-
+<ng-container *ngIf="passengers">
+  <div>
+    <div *ngFor="let passenger of passengers">
+      <app-passager [passager]="passenger"></app-passager>
+    </div>
+  </div>
+</ng-container>
