Splitted departure & arrival
Co-authored-by: nathan.peyronnet@gmail.com <nathan.peyronnet@gmail.com>

--- a/src/app/components/liste-vols/liste-vols.component.html
+++ b/src/app/components/liste-vols/liste-vols.component.html
@@ -2,7 +2,7 @@
 <ng-container *ngIf="vols != null">
   <div>
     <div *ngFor="let vol of vols">
-      <app-vol [vol]="vol" (click)="click(vol)"></app-vol>
+      <app-vol [vol]="vol" [type]="type" (click)="click(vol)"></app-vol>
     </div>
   </div>
 </ng-container>
