Created flight class color
Co-authored-by: nathan.peyronnet@gmail.com <nathan.peyronnet@gmail.com>

--- a/src/app/components/passager/passager.component.html
+++ b/src/app/components/passager/passager.component.html
@@ -2,6 +2,6 @@
 <div class="passenger">
   <div><img src="{{ passager.image }}" /></div>
   <div>{{ passager.nom }}</div>
-  <div>{{ passager.classeVol }}</div>
+  <div class="attribute" [appClasseVol]="passager.classeVol">{{ passager.classeVol }}</div>
   <div class="icon"><mat-icon>work</mat-icon>x{{ passager.nbBagagesSoute }}</div>
 </div>
