Max amount of luggage visualisation
Co-authored-by: nathan.peyronnet@gmail.com <nathan.peyronnet@gmail.com>

--- a/src/app/components/passager/passager.component.html
+++ b/src/app/components/passager/passager.component.html
@@ -3,5 +3,5 @@
   <div><img src="{{ passager.image }}" /></div>
   <div>{{ passager.nom }}</div>
   <div class="attribute" [appClasseVol]="passager.classeVol">{{ passager.classeVol }}</div>
-  <div class="icon"><mat-icon>work</mat-icon>x{{ passager.nbBagagesSoute }}</div>
+  <div class="icon attribute" [appCheckLuggageLimit]="passager"><mat-icon>work</mat-icon>x{{ passager.nbBagagesSoute }}</div>
 </div>
